# aoc2024

./: .gitignore  CMakeLists.txt  main.c  readme.md
src/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py
